
[package]
name = "inyew"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "MeiHui FAN <mhfan@ustc.edu>" ]
description = "Page for 24-Game/Puzzle/Challenge"
repository  = "https://github.com/mhfan/inyew"
homepage = "https://mhfan.github.io/inyew"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
#reqwasm = "0.5"
#serde = "1.0"
#gloo = "0.8"

log  = "0.4"
wasm-logger  = "0.2"
wasm-bindgen = "0.2"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
#js-sys = "0.3"

mexe = "0.2"
rand = "0.8"
inrust = { git = "https://github.com/mhfan/inrust", default-features = false, features = [ "ahash" ] }  # "cc"

[dependencies.getrandom]
features = [ "js" ]
version  = "0.2"

[dependencies.web-sys]
features = [ "HtmlInputElement", "HtmlFieldSetElement", "HtmlSelectElement",
    "HtmlCollection", "DomTokenList", ]
version  = "0.3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true

[workspace]
members = [ "src-tauri" ]

