
[package]
name = "inyew"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "MeiHui FAN <mhfan@ustc.edu>" ]
   homepage = "https://mhfan.github.io/inyew"
 repository = "https://github.com/mhfan/inyew"
description = "WebUI/inyew for 24-Game/Puzzle/Challenge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = [ "csr" ] } # client-side rendering
yew-router = "0.18" #git = "https://github.com/yewstack/yew"
#reqwasm = "0.5"
#serde = "1.0"
#gloo = "0.8"
#gloo-utils = "0.1"

wasm-logger  = "0.2"
wasm-bindgen = "0.2"
#js-sys = "0.3"
log  = "0.4"

rand = "0.8"    # path = "..",
inrust  = { git = "https://github.com/mhfan/inrust", default-features = false, features = [ "ahash" ] }  # "cc", "serde"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
getrandom = { version = "0.2", features = [ "js" ]}

[dependencies.web-sys]
features = [ "HtmlInputElement", "HtmlFieldSetElement", "HtmlSelectElement",
    "HtmlCollection", "DomTokenList", ]
version  = "0.3"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
strip = 'debuginfo'
opt-level = "s"
panic = 'abort'
lto = true

[workspace]
members = [ "src-tauri" ]

